# ai-code-documenter

./: .gitignore  README.md  pyproject.toml  setup.py
fixtures/sample_python/: app.py  models.py  utils.py
fixtures/sample_typescript/: index.ts  types.ts  utils.ts
src/: __init__.py  cli.py
src/analyzer/: __init__.py  base.py  factory.py  python_analyzer.py  typescript_analyzer.py
src/dependency/: __init__.py  graph.py
src/generators/: __init__.py  api_docs_generator.py  base.py  json_generator.py  readme_generator.py
src/metrics/: __init__.py  complexity.py  statistics.py
src/models/: __init__.py  code_elements.py
src/utils/: __init__.py  file_discovery.py  formatting.py
tests/: conftest.py  test_complexity.py  test_dependency_graph.py  test_python_analyzer.py  test_readme_generator.py  test_typescript_analyzer.py
